--- a/blogs-post.htm
+++ b/blogs-post.htm
@@ -111,6 +111,7 @@
                     </ul>
                     <ul class="breadcrumb">
                         <li class="active">Read</li>
+                        <li><a href="blogs-post-edit.htm">Edit</a></li>
                     </ul>
                     <div class="loading">
                         <img src="img/loading.gif">
