--- a/person-language.htm
+++ b/person-language.htm
@@ -33,44 +33,46 @@
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
                     <div class="navbar-header">
                         <ul class="nav menu pull-right">
-                            <li><a href="webrunes-contact.htm" class="btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li><a href="webrunes-contact.htm" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
                         </ul>
                         <a href="#" class="navbar-brand">&nbsp;</a>
                     </div>
                     <div class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
-                            <li class="panel active"><a href="#element1" class="collapse" data-parent="#nav-accordion" data-toggle="collapse">WRIO</a>
-                                <div class="in" id="element1">
+                            <li class="panel">
+                                <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">19 135<span class="currency">WRG</span></span>webGold</a>
+                                <div class="collapse" id="element1">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Alexey Anshakov</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">News name</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Help post</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">42</span>Reader</a>
+                            <li class="panel">
+                                <a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">42</span>Reader</a>
                                 <div class="collapse" id="element2">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Blogs</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Science</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Best photos</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Animals</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Blogs</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Science</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Best photos</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Animals</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element3" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">324</span>Blogs</a>
-                                <div class="collapse" id="element3">
+                            <li class="panel active">
+                                <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">1</span>Alexey Anshakov</a>
+                                <div class="in" id="element3">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">My best post</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Great blogs review</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">My best post</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Great blogs review</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="new panel"><a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
+                            <li class="new panel">
+                                <a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
                                 <div class="collapse" id="element4"></div>
                             </li>
                         </ul>
@@ -81,7 +83,8 @@
             <div class="content col-xs-12 col-sm-5 col-md-7">
                 <div class="margin">
                     <ul class="info nav nav-pills nav-stacked" id="profile-accordion">
-                        <li class="panel"><a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
+                        <li class="panel">
+                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
                             <div class="in" id="profile-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -112,7 +115,7 @@
                         <h1>Choose languages</h1>
                         <div class="paragraph">
                             <p class="col-xs-12 col-md-6 col-lg-5">
-                                Выберите все языки на которых вы хотите читать и создавать посты. Установка влияет на языковой выбор при создании поста. 
+                                Выберите все языки на которых вы хотите читать и создавать посты. Установка влияет на языковой выбор при создании поста.
                             </p>
                             <div class="col-xs-12 col-md-6 col-lg-7">
                                 <div class="callout">
@@ -244,7 +247,8 @@
             <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
-                        <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
+                        <li class="panel">
+                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
                             <div class="in" id="ticket-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -276,7 +280,8 @@
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-remove"></span>Close</button>
                     </div>
                     <ul class="nav nav-pills nav-stacked" id="sidebar-accordion">
-                        <li class="panel"><a href="#sidebar-element1" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
+                        <li class="panel">
+                            <a href="#sidebar-element1" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
                             <div class="collapse" id="sidebar-element1">
                                 <ul class="nav nav-pills nav-stacked">
                                     <li><a href="#"><span class="pull-right">3</span>News</a></li>
@@ -286,14 +291,16 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="panel"><a href="#sidebar-element2" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Content</a>
+                        <li class="panel">
+                            <a href="#sidebar-element2" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Content</a>
                             <div class="collapse" id="sidebar-element2">
                                 <ul class="nav nav-pills nav-stacked">
                                     <li><a href="#">History</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li class="panel"><a href="#sidebar-element3" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Manage</a>
+                        <li class="panel">
+                            <a href="#sidebar-element3" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Manage</a>
                             <div class="in" id="sidebar-element3">
                                 <ul class="nav nav-pills nav-stacked">
                                     <li><a href="#">Profiles</a></li>
