--- a/person-settings.htm
+++ b/person-settings.htm
@@ -33,43 +33,46 @@
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
                     <div class="navbar-header">
                         <ul class="nav menu pull-right">
-                            <li><a href="webrunes-contact.htm" class="btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li><a href="webrunes-contact.htm" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
                         </ul>
                         <a href="#" class="navbar-brand">&nbsp;</a>
                     </div>
                     <div class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
-                            <li class="panel active"><a href="#element1" class="collapse" data-parent="#nav-accordion" data-toggle="collapse">WRIO</a>
-                                <div class="in" id="element1">
+                            <li class="panel">
+                                <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">19 135<span class="currency">WRG</span></span>webGold</a>
+                                <div class="collapse" id="element1">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Alexey Anshakov</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Help post</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">42</span>Reader</a>
+                            <li class="panel">
+                                <a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">42</span>Reader</a>
                                 <div class="collapse" id="element2">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Blogs</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Science</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Best photos</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Animals</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Blogs</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Science</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Best photos</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Animals</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element3" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">324</span>Blogs</a>
-                                <div class="collapse" id="element3">
+                            <li class="panel active">
+                                <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">1</span>Alexey Anshakov</a>
+                                <div class="in" id="element3">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">My best post</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Great blogs review</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">My best post</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Great blogs review</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="new panel"><a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
+                            <li class="new panel">
+                                <a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
                                 <div class="collapse" id="element4"></div>
                             </li>
                         </ul>
@@ -80,7 +83,8 @@
             <div class="content col-xs-12 col-sm-5 col-md-7">
                 <div class="margin">
                     <ul class="info nav nav-pills nav-stacked" id="profile-accordion">
-                        <li class="panel"><a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
+                        <li class="panel">
+                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
                             <div class="in" id="profile-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -107,38 +111,85 @@
                     <ul class="breadcrumb">
                         <li class="active">Settings</li>
                     </ul>
+                    <div class="callout">
+                        <h5>Public profile</h5>
+                        <p>Имя и описание публичного профайла доступны для просмотра всем желающим. Если вы не хотите публиковать посты под собственным именем, то можете создать <a href="#">Alias account</a></p>
+                    </div>
                     <div class="callout warning">
                         <h5>Upgrade guest account for free (30 days left)</h5>
-                        <p>Ваша учетная запись сохранена на этом компьютере. Пожалуйста, введите адрес почты и пароль в течении 30 дней, если хотите сохранить ее за собой и иметь возможность пользоваться аккаунтом с других устройств.</p>
+                        <p>Ваша учетная запись сохранена на этом компьютере. Пожалуйста, введите адрес почты и пароль в течении 30 дней, если хотите сохранить ее за собой и иметь возможность пользоваться аккаунтом с других устройств</p>
                     </div>
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="id-Email" class="col-sm-4 col-md-3 control-label">Your email</label>
-                            <div class="col-sm-8 col-md-9">
-                                <input type="email" class="form-control" id="id-Email" placeholder="Primary email">
+                            <label for="id-Photo" class="col-xs-12 col-sm-4 col-md-3 control-label">Photo</label>
+                            <div class="col-xs-6 col-sm-4 col-md-7">
+                                <input type="url" id="id-Photo" class="form-control" placeholder="Enter URL or upload a picture from computer">
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-2">
+                                <button type="submit" class="btn btn-primary full-width">Browse</button>
                             </div>
                         </div>
-                        <div class="form-group has-error">
+                        <div class="form-group">
+                            <label for="id-First" class="col-sm-4 col-md-3 control-label">Your name</label>
+                            <div class="col-xs-6 col-sm-4 col-md-4">
+                                <input type="text" class="form-control" id="id-First" maxlength="32" placeholder="First" value="I'm">
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-5">
+                                <input type="text" class="form-control" id="id-Last" maxlength="32" placeholder="Last" value="Anonymous">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="id-Email" class="col-sm-4 col-md-3 control-label">Your email</label>
+                            <div class="col-xs-6 col-sm-4 col-md-4">
+                                <input type="email" class="form-control" id="id-Email" placeholder="Primary email">
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-5">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Allow users to contact me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="id-Password" class="col-sm-4 col-md-3 control-label">Password</label>
                             <div class="col-sm-8 col-md-9">
                                 <input type="password" class="form-control" id="id-Password" maxlength="32" placeholder="1-32 Latin characters, numbers and special symbols">
                                 <div class="help-block">1-32 Latin characters, numbers and special symbols</div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="id-Description" class="col-sm-4 col-md-3 control-label">Description</label>
+                            <div class="col-sm-8 col-md-9 has-error">
+                                <textarea class="form-control" rows="6" maxlength="512" id="id-Description" placeholder="Enter a brief description about yourself. Max 512 characters"></textarea>
+                                <div class="help-block">Max 512 characters</div>
+                            </div>
+                        </div>
                         <div class="form-group col-xs-12">
                             <div class="pull-right">
-                                <a href="wrio-account-delete.htm" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete account</a>
-                                <a href="blogs-post.htm" class="btn btn-success"><span class="glyphicon glyphicon-open"></span>Update</a>
+                                <a href="person-account-delete.htm" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete account</a>
+                                <a href="#" class="btn btn-success"><span class="glyphicon glyphicon-open"></span>Update</a>
                             </div>
                         </div>
                     </form>
+                    <ul class="info nav nav-pills nav-stacked" id="help-accordion">
+                        <li class="panel">
+                            <a href="#help-element" data-parent="#help-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Need help?</a>
+                            <div class="in" id="help-element">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li><a href="#">About public and alias profiles</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
             <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
-                        <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
+                        <li class="panel">
+                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
                             <div class="in" id="ticket-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -165,13 +216,15 @@
                     </ul>
                     <div class="margin-bottom">
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-star"></span>Buy premium</button>
-                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-envelope"></span>Send message</button>
-                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
-                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-bookmark"></span>Follow</button>
                         <button type="button" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-cog"></span>Settings</button>
+                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-envelope"></span>Send message</button>
+                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-bookmark"></span>Follow</button>
+                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
+                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-remove"></span>Close</button>
                     </div>
                     <ul class="nav nav-pills nav-stacked" id="sidebar-accordion">
-                        <li class="panel"><a href="#sidebar-element1" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
+                        <li class="panel">
+                            <a href="#sidebar-element1" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
                             <div class="collapse" id="sidebar-element1">
                                 <ul class="nav nav-pills nav-stacked">
                                     <li><a href="#">About</a></li>
@@ -179,7 +232,8 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="panel"><a href="#sidebar-element2" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Profiles</a>
+                        <li class="panel">
+                            <a href="#sidebar-element2" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Profiles</a>
                             <div class="collapse" id="sidebar-element2">
                                 <ul class="nav nav-pills nav-stacked">
                                     <li><a href="#"><span class="label label-primary pull-right">Public profile</span>Alexey Anshakov</a></li>
