--- a/plus-apps.htm
+++ b/plus-apps.htm
@@ -43,7 +43,8 @@
                     </div>
                     <div class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
-                            <li class="panel"><a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse">WRIO</a>
+                            <li class="panel">
+                                <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse">WRIO</a>
                                 <div class="collapse" id="element1">
                                     <ul class="nav nav-pills nav-stacked sub">
                                         <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Alexey Anshakov</a></li>
@@ -51,7 +52,8 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">42</span>Reader</a>
+                            <li class="panel">
+                                <a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">42</span>Reader</a>
                                 <div class="collapse" id="element2">
                                     <ul class="nav nav-pills nav-stacked sub">
                                         <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Blogs</a></li>
@@ -61,7 +63,8 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element3" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">324</span>Blogs</a>
+                            <li class="panel">
+                                <a href="#element3" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">324</span>Blogs</a>
                                 <div class="collapse" id="element3">
                                     <ul class="nav nav-pills nav-stacked sub">
                                         <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
@@ -70,7 +73,8 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="new panel active"><a href="#element4" data-parent="#nav-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-plus"></span></a>
+                            <li class="new panel active">
+                                <a href="#element4" data-parent="#nav-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-plus"></span></a>
                                 <div class="collapse" id="element4"></div>
                             </li>
                         </ul>
@@ -81,7 +85,8 @@
             <div class="content col-xs-12 col-sm-5 col-md-7">
                 <div class="margin">
                     <ul class="info nav nav-pills nav-stacked" id="profile-accordion">
-                        <li class="panel"><a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
+                        <li class="panel">
+                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
                             <div class="in" id="profile-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -121,7 +126,7 @@
                             <div class="col-xs-12 col-md-6 col-lg-5">
                                 <img src="img/webrunes-preview.png" class="pull-left">
                                 <ul class="details">
-                                    <li>Hub: webRunes</li>
+                                    <li>Hub: webRunes <span class="glyphicon glyphicon-plus-sign"></span></li>
                                     <li>Published: 22 Jun 2013</li>
                                     <li>Rating: 244</li>
                                     <li>Users: 1,634</li>
@@ -258,75 +263,77 @@
                         </ul>
                         <p class="total-pages">Total pages: 124</p>
                     </div>
+                </div>
             </div>
-        </div>
 
-        <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
-            <div class="sidebar-margin">
-                <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
-                    <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Details</a>
-                        <div class="in" id="ticket-element">
-                            <div class="tickets">
-                                <div class="media thumbnail">
-                                    <div class="col-xs-12">
-                                        <img src="img/plus-preview.jpg" class="pull-left">
-                                        <ul class="details">
-                                            <li>App: Plus</li>
-                                            <li>Published: 22 Jun 2013</li>
-                                            <li>Rating: 244</li>
-                                            <li>Users: 1,634</li>
-                                            <li>Price: Free</li>
-                                            <li>Developer: webRunes</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <div class="media-body">
-                                            Браузер wrio os. Просмотр хабов, сторонних сайтов, а также создание собственных хабов.
+            <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
+                <div class="sidebar-margin">
+                    <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
+                        <li class="panel">
+                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Details</a>
+                            <div class="in" id="ticket-element">
+                                <div class="tickets">
+                                    <div class="media thumbnail">
+                                        <div class="col-xs-12">
+                                            <img src="img/plus-preview.jpg" class="pull-left">
+                                            <ul class="details">
+                                                <li>App: Plus</li>
+                                                <li>Published: 22 Jun 2013</li>
+                                                <li>Rating: 244</li>
+                                                <li>Users: 1,634</li>
+                                                <li>Price: Free</li>
+                                                <li>Developer: webRunes</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-xs-12">
+                                            <div class="media-body">
+                                                Браузер wrio os. Просмотр хабов, сторонних сайтов, а также создание собственных хабов.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-                <div class="margin-bottom">
-                    <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-th-list"></span>Manage lists</button>
-                    <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
-                    <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus"></span>Added</button>
+                        </li>
+                    </ul>
+                    <div class="margin-bottom">
+                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-th-list"></span>Manage lists</button>
+                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
+                        <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus"></span>Added</button>
+                    </div>
+                    <ul class="nav nav-pills nav-stacked tooltip-demo" id="sidebar-accordion">
+                        <li class="panel">
+                            <a href="#sidebar-element1" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
+                            <div class="collapse" id="sidebar-element1">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li><a href="#">News</a></li>
+                                    <li><a href="plus-about.htm">About</a></li>
+                                    <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Team</a></li>
+                                    <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Settings</a></li>
+                                    <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Feedback</a></li>
+                                    <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Terms</a></li>
+                                    <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Privacy</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="disabled"><a href="#" data-toggle="tooltip" data-placement="left" title="Not yet available">Tutorial</a></li>
+                        <li class="disabled"><a href="#" data-toggle="tooltip" data-placement="left" title="Not yet available">Offers</a></li>
+                        <li class="disabled"><a href="#" data-toggle="tooltip" data-placement="left" title="Not yet available">Themes</a></li>
+                        <li><a href="#">Applications</a></li>
+                        <li><a href="#">Hubs</a></li>
+                        <li><a href="#">People</a></li>
+                        <li><a href="#">External</a></li>
+                    </ul>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="#"><span class="pull-right">0</span>Following</a></li>
+                        <li><a href="#"><span class="pull-right">3</span>Bookmarks</a></li>
+                        <li class="active"><a href="#"><span class="pull-right">11</span>My Apps</a></li>
+                        <li><a href="#"><span class="pull-right">7</span>Favorite Hubs</a></li>
+                        <li><a href="#"><span class="pull-right">1</span>Favorite External</a></li>
+                    </ul>
                 </div>
-                <ul class="nav nav-pills nav-stacked tooltip-demo" id="sidebar-accordion">
-                    <li class="panel"><a href="#sidebar-element1" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
-                        <div class="collapse" id="sidebar-element1">
-                            <ul class="nav nav-pills nav-stacked">
-                                <li><a href="#">News</a></li>
-                                <li><a href="plus-about.htm">About</a></li>
-                                <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Team</a></li>
-                                <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Settings</a></li>
-                                <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Feedback</a></li>
-                                <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Terms</a></li>
-                                <li class="disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><a href="#">Privacy</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="disabled"><a href="#" data-toggle="tooltip" data-placement="left" title="Not yet available">Tutorial</a></li>
-                    <li class="disabled"><a href="#" data-toggle="tooltip" data-placement="left" title="Not yet available">Offers</a></li>
-                    <li class="disabled"><a href="#" data-toggle="tooltip" data-placement="left" title="Not yet available">Themes</a></li>
-                    <li><a href="#">Applications</a></li>
-                    <li><a href="#">Hubs</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">External</a></li>
-                </ul>
-                <ul class="nav nav-pills nav-stacked">
-                    <li><a href="#"><span class="pull-right">0</span>Following</a></li>
-                    <li><a href="#"><span class="pull-right">3</span>Bookmarks</a></li>
-                    <li class="active"><a href="#"><span class="pull-right">11</span>My Apps</a></li>
-                    <li><a href="#"><span class="pull-right">7</span>Favorite Hubs</a></li>
-                    <li><a href="#"><span class="pull-right">1</span>Favorite External</a></li>
-                </ul>
             </div>
-        </div>
 
-    </div>
+        </div>
     </div>
 
     <script src="js/jquery-1.10.2.min.js"></script>
