New ticket layout & inner tickets for pages

--- a/person-language.htm
+++ b/person-language.htm
@@ -276,7 +276,6 @@
                     <div class="margin-bottom tooltip-demo">
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
                         <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus"></span>Added</button>
-                        <button type="button" class="btn btn-default btn-block disabled" data-toggle="tooltip" data-placement="left" title="Not yet available"><span class="glyphicon glyphicon-download"></span>Download source</button>
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-remove"></span>Close</button>
                     </div>
                     <ul class="nav nav-pills nav-stacked" id="sidebar-accordion">
@@ -308,8 +307,8 @@
                                     <li><a href="#">Apps</a></li>
                                     <li><a href="#">Hubs</a></li>
                                     <li><a href="#">Posts</a></li>
-                                    <li><a href="#">Videos</a></li>
-                                    <li><a href="#">Audios</a></li>
+                                    <li><a href="#">Video</a></li>
+                                    <li><a href="#">Audio</a></li>
                                     <li><a href="#">Books</a></li>
                                     <li><a href="#">Places</a></li>
                                 </ul>
