--- a/person-accounts-link-account.htm
+++ b/person-accounts-link-account.htm
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div class="container-liquid">
+    <div class="container-liquid tooltip-demo">
         <div class="row row-offcanvas row-offcanvas-right">
             <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
@@ -109,79 +109,50 @@
                         </li>
                     </ul>
                     <ul class="breadcrumb">
-                        <li class="active">Settings</li>
+                        <li><a href="person-accounts.htm">Accounts</a></li>
+                        <li class="active">Link a new account</li>
                     </ul>
-                    <div class="callout">
-                        <h5>Public profile</h5>
-                        <p>Имя и описание публичного профайла доступны для просмотра всем желающим. Если вы не хотите публиковать посты под собственным именем, то можете создать <a href="#">Alias account</a></p>
-                    </div>
-                    <div class="callout warning">
-                        <h5>Upgrade guest account for free (30 days left)</h5>
-                        <p>Ваша учетная запись сохранена на этом компьютере. Пожалуйста, введите адрес почты и пароль в течении 30 дней, если хотите сохранить ее за собой и иметь возможность пользоваться аккаунтом с других устройств</p>
-                    </div>
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="id-Photo" class="col-xs-12 col-sm-4 col-md-3 control-label">Photo</label>
-                            <div class="col-xs-6 col-sm-4 col-md-7">
-                                <input type="url" id="id-Photo" class="form-control" placeholder="Enter URL or upload a picture from computer">
-                            </div>
-                            <div class="col-xs-6 col-sm-4 col-md-2">
-                                <button type="submit" class="btn btn-primary full-width">Browse</button>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="id-First" class="col-sm-4 col-md-3 control-label">Your name</label>
-                            <div class="col-xs-6 col-sm-4 col-md-4">
-                                <input type="text" class="form-control" id="id-First" maxlength="32" placeholder="First" value="I'm">
-                            </div>
-                            <div class="col-xs-6 col-sm-4 col-md-5">
-                                <input type="text" class="form-control" id="id-Last" maxlength="32" placeholder="Last" value="Anonymous">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="id-Email" class="col-sm-4 col-md-3 control-label">Your email</label>
-                            <div class="col-xs-6 col-sm-4 col-md-4">
-                                <input type="email" class="form-control" id="id-Email" placeholder="Primary email">
-                            </div>
-                            <div class="col-xs-6 col-sm-4 col-md-5">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"> Allow users to contact me
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="id-Password" class="col-sm-4 col-md-3 control-label">Password</label>
-                            <div class="col-sm-8 col-md-9">
-                                <input type="password" class="form-control" id="id-Password" maxlength="32" placeholder="1-32 Latin characters, numbers and special symbols">
-                                <div class="help-block">1-32 Latin characters, numbers and special symbols</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="id-Description" class="col-sm-4 col-md-3 control-label">Description</label>
-                            <div class="col-sm-8 col-md-9 has-error">
-                                <textarea class="form-control" rows="6" maxlength="512" id="id-Description" placeholder="Enter a brief description about yourself. Max 512 characters"></textarea>
-                                <div class="help-block">Max 512 characters</div>
-                            </div>
+                            <ul class="nav nav-pills nav-stacked providers">
+                                <li>
+                                    <a href="#">
+                                        <img src="https://oauth.io/api/providers/github/logo" title="">
+                                        <label>GitHub</label>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://oauth.io/api/providers/google/logo" title="">
+                                        <label>Google</label>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://oauth.io/api/providers/facebook/logo" title="">
+                                        <label>Facebook</label>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://oauth.io/api/providers/twitter/logo" title="">
+                                        <label>Twitter</label>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://oauth.io/api/providers/youtube/logo" title="">
+                                        <label>Youtube</label>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         <div class="form-group col-xs-12">
                             <div class="pull-right">
-                                <a href="person-account-delete.htm" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete account</a>
-                                <a href="#" class="btn btn-success"><span class="glyphicon glyphicon-open"></span>Update</a>
+                                <a href="person-accounts.htm" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span>Finish</a>
                             </div>
                         </div>
                     </form>
-                    <ul class="info nav nav-pills nav-stacked" id="help-accordion">
-                        <li class="panel">
-                            <a href="#help-element" data-parent="#help-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Need help?</a>
-                            <div class="in" id="help-element">
-                                <ul class="nav nav-pills nav-stacked">
-                                    <li><a href="#">About public and alias profiles</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
                 </div>
             </div>
 
@@ -194,13 +165,13 @@
                                 <div class="tickets">
                                     <div class="media thumbnail">
                                         <div class="col-xs-12">
-                                            <img src="img/no-photo.png" class="pull-left">
+                                            <img src="img/wrio-preview.jpg" class="pull-left">
                                             <ul class="details">
                                                 <li>Name: WRIO</li>
                                                 <li>Created: 22 Jun 2013</li>
                                                 <li>Rating: 244</li>
                                                 <li>Users: 1,634</li>
-                                                <li>Price: Free &middot; Full</li>
+                                                <li>Access: Free &middot; Open source</li>
                                                 <li>Owner: webRunes</li>
                                             </ul>
                                         </div>
@@ -215,11 +186,8 @@
                         </li>
                     </ul>
                     <div class="margin-bottom">
-                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-star"></span>Buy premium</button>
-                        <button type="button" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-cog"></span>Settings</button>
-                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-envelope"></span>Send message</button>
-                        <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-bookmark"></span>Follow</button>
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
+                        <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus"></span>Added</button>
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-remove"></span>Close</button>
                     </div>
                     <ul class="nav nav-pills nav-stacked" id="sidebar-accordion">
@@ -227,36 +195,50 @@
                             <a href="#sidebar-element1" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Cover</a>
                             <div class="collapse" id="sidebar-element1">
                                 <ul class="nav nav-pills nav-stacked">
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Timeline</a></li>
+                                    <li><a href="#"><span class="pull-right">3</span>News</a></li>
+                                    <li><a href="wrio-about.htm">About</a></li>
+                                    <li><a href="wrio-terms.htm"><span class="label label-success pull-right">Class A</span>Terms</a></li>
+                                    <li><a href="wrio-privacy.htm"><span class="label label-success pull-right">Class A</span>Privacy</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="panel">
-                            <a href="#sidebar-element2" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Profiles</a>
+                            <a href="#sidebar-element2" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Content</a>
                             <div class="collapse" id="sidebar-element2">
                                 <ul class="nav nav-pills nav-stacked">
-                                    <li><a href="#"><span class="label label-primary pull-right">Public profile</span>Alexey Anshakov</a></li>
-                                    <li><a href="#"><span class="label label-primary pull-right">Alias profile</span>Anonymous</a></li>
+                                    <li><a href="#">History</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="#"><span class="pull-right">2</span>Offers</a></li>
-                        <li><a href="#"><span class="pull-right">2</span>Rewards</a></li>
+                        <li class="panel active">
+                            <a href="#sidebar-element3" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Accounts</a>
+                            <div class="in" id="sidebar-element3">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li><a href="#"><span class="pull-right" style="color:#ccc">Private</span>Emails</a></li>
+                                    <li><a href="#"><span class="pull-right" style="color:#ccc">Private</span>Services</a></li>
+                                    <li><a href="#">Social networks</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li><a href="#">Followers</a></li>
                     </ul>
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">Photos</a></li>
-                        <li><a href="#">Videos</a></li>
-                        <li><a href="#">Followers</a></li>
+                        <li><a href="#">Apps</a></li>
+                        <li><a href="#">Hubs</a></li>
+                        <li><a href="#" data-toggle="tooltip" data-placement="left" title="Shared. Only a few can view this page"><span class="label label-default pull-right">Shared</span>Posts</a></li>
+                        <li><a href="#" data-toggle="tooltip" data-placement="left" title="Private. Only you can view this page"><span class="label label-default pull-right">Private</span>Video</a></li>
+                        <li><a href="#">Audio</a></li>
+                        <li><a href="#">Books</a></li>
+                        <li><a href="#">Places</a></li>
                     </ul>
                 </div>
             </div>
-
         </div>
     </div>
 
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/application.js"></script>
     <script src="js/offcanvas.js"></script>
 </body>
 </html>
