--- a/person-accounts.htm
+++ b/person-accounts.htm
@@ -109,8 +109,7 @@
                         </li>
                     </ul>
                     <ul class="breadcrumb">
-                        <li><a href="wrio-manage.htm">Manage</a></li>
-                        <li class="active">Browse</li>
+                        <li class="active">Accounts</li>
                     </ul>
                     <div class="tickets">
                         <div class="media thumbnail">
@@ -156,11 +155,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group col-xs-12">
-                            <div class="pull-right">
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-link-profile"><span class="glyphicon glyphicon-link"></span>Link a new profile</button>
+                            <div class="form-group col-xs-12">
+                                <div class="pull-right">
+                            <a href="person-accounts-link-account.htm" type="button" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-link"></span>Link a new account</a>
+                                </div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -219,76 +218,27 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="panel">
-                            <a href="#sidebar-element3" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Manage</a>
+                        <li class="panel active">
+                            <a href="#sidebar-element3" class="collapsed" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Accounts</a>
                             <div class="in" id="sidebar-element3">
                                 <ul class="nav nav-pills nav-stacked">
-                                    <li><a href="#">Apps</a></li>
-                                    <li><a href="#">Hubs</a></li>
-                                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Shared. Only a few can view this page"><span class="glyphicon glyphicon-share-alt pull-right"></span>Posts</a></li>
-                                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Private. Only you can view this page"><span class="glyphicon glyphicon-lock pull-right"></span>Videos</a></li>
-                                    <li><a href="#">Audios</a></li>
-                                    <li><a href="#">Books</a></li>
-                                    <li><a href="#">Places</a></li>
+                                    <li><a href="#"><span class="pull-right" style="color:#ccc">Private</span>Emails</a></li>
+                                    <li><a href="#"><span class="pull-right" style="color:#ccc">Private</span>Services</a></li>
+                                    <li><a href="#">Social networks</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li class="active"><a href="#">Accounts</a></li>
                         <li><a href="#">Followers</a></li>
                     </ul>
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">Alexey Anshakov</a></li>
+                        <li><a href="#">Apps</a></li>
+                        <li><a href="#">Hubs</a></li>
+                        <li><a href="#" data-toggle="tooltip" data-placement="left" title="Shared. Only a few can view this page"><span class="label label-default pull-right">Shared</span>Posts</a></li>
+                        <li><a href="#" data-toggle="tooltip" data-placement="left" title="Private. Only you can view this page"><span class="label label-default pull-right">Private</span>Video</a></li>
+                        <li><a href="#">Audio</a></li>
+                        <li><a href="#">Books</a></li>
+                        <li><a href="#">Places</a></li>
                     </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="modal-link-profile" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Link a new profile</h4>
-                </div>
-                <div class="modal-body">
-                    <ul class="nav nav-pills nav-stacked providers">
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/github/logo" title="">
-                                <label>GitHub</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/google/logo" title="">
-                                <label>Google</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/facebook/logo" title="">
-                                <label>Facebook</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/twitter/logo" title="">
-                                <label>Twitter</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/youtube/logo" title="">
-                                <label>Youtube</label>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span>Cancel</button>
                 </div>
             </div>
         </div>
