--- a/sign_in-v2.htm
+++ b/sign_in-v2.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -32,8 +32,8 @@
         <h2>All your stuff in one place</h2>
         <form class="form-signin" role="form">
             <h4 class="form-signin-heading">Please sign in</h4>
-            <input type="text" class="form-control" placeholder="Email" required="" autofocus="">
-            <input type="password" class="form-control" placeholder="Password" required="">
+            <input type="text" class="form-control" placeholder="Email" required="" autofocus=">
+            <input type="password" class="form-control" placeholder="Password" required=">
             <a href="#" class="pull-right">Create an account</a>
             <label class="checkbox">
                 <input type="checkbox" value="remember-me">
