--- a/blogs-post-edit.htm
+++ b/blogs-post-edit.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -33,42 +33,42 @@
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
                     <div class="navbar-header tooltip-demo">
                         <ul class="nav menu pull-right">
-                            <li data-toggle="tooltip" data-placement="bottom" title="Call IA"><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-comment"></span></a></li>
-                            <li data-toggle="tooltip" data-placement="bottom" title="Logout"><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
-                            <li data-toggle="tooltip" data-placement="bottom" title="Full screen"><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
-                            <li data-toggle="tooltip" data-placement="bottom" title="Open/close menu"><a href="#" class="btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                            <li data-toggle="tooltip" data-placement="bottom" title="Show/hide the sidebar"><a href="#" class="btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li data-toggle="tooltip" data-placement="bottom" title="Call IA"><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-comment"></span></a></li>
+                            <li data-toggle="tooltip" data-placement="bottom" title="Logout"><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
+                            <li data-toggle="tooltip" data-placement="bottom" title="Full screen"><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+                            <li data-toggle="tooltip" data-placement="bottom" title="Open/close menu"><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                            <li data-toggle="tooltip" data-placement="bottom" title="Show/hide the sidebar"><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
                         </ul>
                         <a href="webrunes-contact.htm" class="navbar-brand" data-toggle="tooltip" data-placement="right" title="Contact us">&nbsp;</a>
                     </div>
                     <div class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
                             <li class="panel">
-                                <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">19 135<span class="currency">WRG</span></span>webGold</a>
+                                <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">19 135<span class="currency">WRG</span></span>webGold</a>
                                 <div class="collapse" id="element1">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Help post</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Help post</a></li>
                                     </ul>
                                 </div>
                             </li>
                             <li class="panel">
-                                <a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">42</span>Reader</a>
+                                <a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">42</span>Reader</a>
                                 <div class="collapse" id="element2">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Blogs</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Science</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Best photos</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Animals</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Blogs</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Science</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Best photos</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Animals</a></li>
                                     </ul>
                                 </div>
                             </li>
                             <li class="panel">
-                                <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">324</span>Blogs</a>
+                                <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">324</span>Blogs</a>
                                 <div class="in" id="element3">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">My best post</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Great blogs review</a></li>
-                                        <li class="active"><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">My best post</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Great blogs review</a></li>
+                                        <li class="active"><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -85,7 +85,7 @@
                 <div class="margin">
                     <ul class="info nav nav-pills nav-stacked" id="profile-accordion">
                         <li class="panel">
-                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
+                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
                             <div class="in" id="profile-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -156,7 +156,7 @@
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
                         <li class="panel">
-                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Post</a>
+                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Post</a>
                             <div class="in" id="ticket-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
