--- a/donation.htm
+++ b/donation.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -33,15 +33,15 @@
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
                     <div class="navbar-header">
                         <ul class="nav menu pull-right">
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
                         </ul>
                         <a href="#" class="navbar-brand">&nbsp;</a>
                     </div>
                     <div class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
-                            <li class="panel"><a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">4</span>Alexey Anshakov</a>
+                            <li class="panel"><a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">4</span>Alexey Anshakov</a>
                                 <div class="collapse" id="element1"></div>
                             </li>
                             <li class="new panel active"><a href="#element2" data-parent="#nav-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-plus"></span></a>
@@ -82,7 +82,7 @@
             <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
-                        <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Donator</a>
+                        <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Donator</a>
                             <div class="in" id="ticket-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -110,8 +110,8 @@
                                     <ul class="breadcrumb">
                                         <li class="active">Already have an account?</li>
                                     </ul>
-                                    <input type="text" class="form-control" placeholder="Email" required="" autofocus="">
-                                    <input type="password" class="form-control" placeholder="Password" required="">
+                                    <input type="text" class="form-control" placeholder="Email" required="" autofocus=">
+                                    <input type="password" class="form-control" placeholder="Password" required=">
                                     <a href="#sign_in-carousel" class="pull-right" data-slide="prev">Forgot password?</a>
                                     <label class="checkbox">
                                         <input type="checkbox" value="remember-me">
@@ -131,7 +131,7 @@
                                     <div class="alert alert-danger">
                                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>This email address isn't associated with any account
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Email" required="" autofocus="">
+                                    <input type="text" class="form-control" placeholder="Email" required="" autofocus=">
                                     <label class="checkbox">
                                         <a href="#sign_in-carousel" class="pull-right" data-slide="next">Sign in</a>
                                     </label>
