--- a/old_browser.htm
+++ b/old_browser.htm
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <title>webRunes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content=">
     
     <link href="css/loading.css" rel="stylesheet">
 
