--- a/person-accounts-link-account.htm
+++ b/person-accounts-link-account.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -84,7 +84,7 @@
                 <div class="margin">
                     <ul class="info nav nav-pills nav-stacked" id="profile-accordion">
                         <li class="panel">
-                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
+                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
                             <div class="in" id="profile-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -117,31 +117,31 @@
                             <ul class="nav nav-pills nav-stacked providers">
                                 <li>
                                     <a href="#">
-                                        <img src="https://oauth.io/api/providers/github/logo" title="">
+                                        <img src="https://oauth.io/api/providers/github/logo" title=">
                                         <label>GitHub</label>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img src="https://oauth.io/api/providers/google/logo" title="">
+                                        <img src="https://oauth.io/api/providers/google/logo" title=">
                                         <label>Google</label>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img src="https://oauth.io/api/providers/facebook/logo" title="">
+                                        <img src="https://oauth.io/api/providers/facebook/logo" title=">
                                         <label>Facebook</label>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img src="https://oauth.io/api/providers/twitter/logo" title="">
+                                        <img src="https://oauth.io/api/providers/twitter/logo" title=">
                                         <label>Twitter</label>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img src="https://oauth.io/api/providers/youtube/logo" title="">
+                                        <img src="https://oauth.io/api/providers/youtube/logo" title=">
                                         <label>Youtube</label>
                                     </a>
                                 </li>
@@ -160,7 +160,7 @@
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
                         <li class="panel">
-                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
+                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
                             <div class="in" id="ticket-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
