--- a/person-profile-edit.htm
+++ b/person-profile-edit.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -64,12 +64,6 @@
                             </li>
                             <li class="panel active">
                                 <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">1</span>Alexey Anshakov</a>
-                                <div class="in" id="element3">
-                                    <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">My best post</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Great blogs review</a></li>
-                                    </ul>
-                                </div>
                             </li>
                             <li class="new panel">
                                 <a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
@@ -84,57 +78,108 @@
                 <div class="margin">
                     <ul class="info nav nav-pills nav-stacked" id="profile-accordion">
                         <li class="panel">
-                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged with WRIO</a>
+                            <a href="#profile-element" data-parent="#profile-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Logged as Alexey Anshakov <sup>WRIO</sup></a>
                             <div class="in" id="profile-element">
-                                <div class="tickets">
+                                <article>
                                     <div class="media thumbnail">
-                                        <div class="col-xs-12 col-md-6 col-lg-5">
+                                        <div class="col-xs-12 col-md-6 pull-right">
                                             <img src="img/profile1.jpg" class="pull-left">
                                             <ul class="details">
-                                                <li>Name: Alexey Anshakov</li>
                                                 <li>Registered: 22 Jun 2013</li>
                                                 <li>Rating: 244</li>
                                                 <li>Followers: 1,634</li>
                                                 <li>Posts: 1,634</li>
                                             </ul>
                                         </div>
-                                        <div class="col-xs-12 col-md-6 col-lg-7">
-                                            <div class="media-body">
-                                                Disclaimer: We start a series of stories describing various issues and problems that are related for the most part to the Internet, and our vision of possible ways to solve them. Those will often be followed by previews of projects mentioned in the stories. Keep in mind: some of them might change, some will remain just our fantasy; at this moment we are a small team, but with a great desire to change this world for the better or at least a little bit.
-                                            </div>
+                                        <div class="col-xs-12 col-md-6">
+                                            <p>
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                            </p><ul class="actions">
+                                                <li><a href="#"><span class="glyphicon glyphicon-edit"></span>Edit</a></li>
+                                                <li><a href="#"><span class="glyphicon glyphicon-share"></span>Share</a></li>
+                                                <li><a href="wrio-account-edit.htm"><span class="glyphicon glyphicon-arrow-up"></span>Upgrade guest account for free</a> <span class="label label-warning">30 days left</span></li>
+                                            </ul>
+                                            <p></p>
                                         </div>
                                     </div>
-                                </div>
+                                </article>
                             </div>
                         </li>
                     </ul>
                     <ul class="breadcrumb">
-                        <li class="active">Settings</li>
+                        <li class="active">Alexey Anshakov</li>
                     </ul>
+                    <div class="callout">
+                        <h5>Public profile</h5>
+                        <p>Имя и описание публичного профайла доступны для просмотра всем желающим. Если вы не хотите публиковать посты под собственным именем, то можете создать <a href="#">Alias account</a></p>
+                    </div>
                     <div class="callout warning">
-                        <h5>Warning!</h5>
-                        <p>Вы залогинены под Guest account. Если хотите сохранить за собой аккаунт и использовать его в дальнейшем, пожалуйста, введите свой адрес электронной почты и желаемый пароль. Если аккаунт вам больше не нужен, то нажмите <a href="sign_in.htm">Delete account and logout</a>.</p>
+                        <h5>Upgrade guest account for free (30 days left)</h5>
+                        <p>Ваша учетная запись сохранена на этом компьютере. Пожалуйста, введите адрес почты и пароль в течении 30 дней, если хотите сохранить ее за собой и иметь возможность пользоваться аккаунтом с других устройств</p>
                     </div>
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="id-Email" class="col-sm-4 col-md-3 control-label">Your email</label>
-                            <div class="col-sm-8 col-md-9">
-                                <input type="email" class="form-control" id="id-Email" placeholder="Primary email">
+                            <label for="id-Photo" class="col-xs-12 col-sm-4 col-md-3 control-label">Photo</label>
+                            <div class="col-xs-6 col-sm-4 col-md-7">
+                                <input type="url" id="id-Photo" class="form-control" placeholder="Enter URL or upload a picture from computer">
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-2">
+                                <button type="submit" class="btn btn-primary full-width">Browse</button>
                             </div>
                         </div>
-                        <div class="form-group has-error">
+                        <div class="form-group">
+                            <label for="id-First" class="col-sm-4 col-md-3 control-label">Your name</label>
+                            <div class="col-xs-6 col-sm-4 col-md-4">
+                                <input type="text" class="form-control" id="id-First" maxlength="32" placeholder="First" value="I'm">
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-5">
+                                <input type="text" class="form-control" id="id-Last" maxlength="32" placeholder="Last" value="Anonymous">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="id-Email" class="col-sm-4 col-md-3 control-label">Your email</label>
+                            <div class="col-xs-6 col-sm-4 col-md-4">
+                                <input type="email" class="form-control" id="id-Email" placeholder="Primary email">
+                            </div>
+                            <div class="col-xs-6 col-sm-4 col-md-5">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Allow users to contact me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="id-Password" class="col-sm-4 col-md-3 control-label">Password</label>
                             <div class="col-sm-8 col-md-9">
                                 <input type="password" class="form-control" id="id-Password" maxlength="32" placeholder="1-32 Latin characters, numbers and special symbols">
                                 <div class="help-block">1-32 Latin characters, numbers and special symbols</div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="id-Description" class="col-sm-4 col-md-3 control-label">Description</label>
+                            <div class="col-sm-8 col-md-9 has-error">
+                                <textarea class="form-control" rows="6" maxlength="512" id="id-Description" placeholder="Enter a brief description about yourself. Max 512 characters"></textarea>
+                                <div class="help-block">Max 512 characters</div>
+                            </div>
+                        </div>
                         <div class="form-group col-xs-12">
                             <div class="pull-right">
-                                <a href="#" class="btn btn-success"><span class="glyphicon glyphicon-open"></span>Update account & Logout</a>
+                                <a href="person-account-delete.htm" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>Delete account</a>
+                                <a href="#" class="btn btn-success"><span class="glyphicon glyphicon-open"></span>Update</a>
                             </div>
                         </div>
                     </form>
+                    <ul class="info nav nav-pills nav-stacked" id="help-accordion">
+                        <li class="panel">
+                            <a href="#help-element" data-parent="#help-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Need help?</a>
+                            <div class="in" id="help-element">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li><a href="#">About public and alias profiles</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -142,14 +187,13 @@
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
                         <li class="panel">
-                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Profile</a>
+                            <a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Alexey Anshakov</a>
                             <div class="in" id="ticket-element">
-                                <div class="tickets">
+                                <article>
                                     <div class="media thumbnail">
-                                        <div class="col-xs-12">
+                                        <div class="col-xs-12 pull-right">
                                             <img src="img/profile1.jpg" class="pull-left">
                                             <ul class="details">
-                                                <li>Name: Alexey Anshakov</li>
                                                 <li>Registered: 22 Jun 2013</li>
                                                 <li>Rating: 244</li>
                                                 <li>Followers: 1,634</li>
@@ -157,18 +201,17 @@
                                             </ul>
                                         </div>
                                         <div class="col-xs-12">
-                                            <div class="media-body">
-                                                Disclaimer: We start a series of stories describing various issues and problems that are related for the most part to the Internet, and our vision of possible ways to solve them. Those will often be followed by previews of projects mentioned in the stories. Keep in mind: some of them might change, some will remain just our fantasy; at this moment we are a small team, but with a great desire to change this world for the better or at least a little bit.
-                                            </div>
+                                            <p>
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                            </p>
                                         </div>
                                     </div>
-                                </div>
+                                </article>
                             </div>
                         </li>
                     </ul>
                     <div class="margin-bottom">
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-star"></span>Buy premium</button>
-                        <button type="button" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-cog"></span>Settings</button>
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-envelope"></span>Send message</button>
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-bookmark"></span>Follow</button>
                         <button type="button" class="btn btn-default btn-block"><span class="glyphicon glyphicon-share"></span>Share</button>
@@ -184,12 +227,21 @@
                                 </ul>
                             </div>
                         </li>
+                        <li class="panel">
+                            <a href="#sidebar-element2" data-parent="#sidebar-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Profiles</a>
+                            <div class="in" id="sidebar-element2">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li class="active"><a href="#">Alexey Anshakov</a></li>
+                                    <li><a href="#"><span class="label label-primary pull-right">Private</span>Anonymous</a></li>
+                                </ul>
+                            </div>
+                        </li>
                         <li><a href="#"><span class="pull-right">2</span>Offers</a></li>
                         <li><a href="#"><span class="pull-right">2</span>Rewards</a></li>
                     </ul>
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">Photos</a></li>
-                        <li><a href="#">Videos</a></li>
+                        <li><a href="#">Photo</a></li>
+                        <li><a href="#">Video</a></li>
                         <li><a href="#">Followers</a></li>
                     </ul>
                 </div>
