--- a/plus.htm
+++ b/plus.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -33,11 +33,11 @@
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
                     <div class="navbar-header">
                         <ul class="nav menu pull-right">
-                            <li><a href="webrunes-contact.htm" class="btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li><a href="webrunes-contact.htm" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
                         </ul>
                         <a href="#" class="navbar-brand">&nbsp;</a>
                     </div>
@@ -46,27 +46,27 @@
                             <li class="panel"><a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse">WRIO</a>
                                 <div class="collapse" id="element1">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Alexey Anshakov</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">News name</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Alexey Anshakov</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">News name</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">42</span>Reader</a>
+                            <li class="panel"><a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">42</span>Reader</a>
                                 <div class="collapse" id="element2">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Blogs</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Science</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Best photos</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Animals</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Blogs</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Science</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Best photos</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Animals</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel"><a href="#element3" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">324</span>Blogs</a>
+                            <li class="panel"><a href="#element3" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">324</span>Blogs</a>
                                 <div class="collapse" id="element3">
                                     <ul class="nav nav-pills nav-stacked sub">
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">My best post</a></li>
-                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn-xs"></span></a><a href="#">Great blogs review</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="blogs-post.htm">in. Part 1: Vision of the Internet Future</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">My best post</a></li>
+                                        <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs"></span></a><a href="#">Great blogs review</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -138,7 +138,7 @@
         <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
             <div class="sidebar-margin">
                 <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
-                    <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
+                    <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>App</a>
                         <div class="in" id="ticket-element">
                             <div class="tickets">
                                 <div class="media thumbnail">
