--- a/sign_in.htm
+++ b/sign_in.htm
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -33,18 +33,18 @@
                 <div class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" role="navigation">
                     <div class="navbar-header">
                         <ul class="nav menu pull-right">
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-comment"></span></a></li>
-                            <li><a href="webrunes-contact.htm" class="btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                            <li><a href="#" class="btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-comment"></span></a></li>
+                            <li><a href="webrunes-contact.htm" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                            <li><a href="#" class="btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
                         </ul>
                         <a href="#" class="navbar-brand">&nbsp;</a>
                     </div>
                     <div class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
-                            <li class="panel"><a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">4</span>Alexey Anshakov</a>
+                            <li class="panel"><a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn btn-xs pull-right">4</span>Alexey Anshakov</a>
                                 <div class="collapse" id="element1"></div>
                             </li>
                             <li class="new panel active"><a href="#element2" data-parent="#nav-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-plus"></span></a>
@@ -183,7 +183,7 @@
             <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <div class="sidebar-margin">
                     <ul class="info nav nav-pills nav-stacked" id="ticket-accordion">
-                        <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse" class=""><span class="glyphicon glyphicon-chevron-down pull-right"></span>Guest account</a>
+                        <li class="panel"><a href="#ticket-element" data-parent="#ticket-accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down pull-right"></span>Guest account</a>
                             <div class="in" id="ticket-element">
                                 <div class="tickets">
                                     <div class="media thumbnail">
@@ -206,73 +206,73 @@
                     <ul class="nav nav-pills nav-stacked providers">
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/google/logo" title="">
+                                <img src="https://oauth.io/api/providers/google/logo" title=">
                                 <label>Google</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/facebook/logo" title="">
+                                <img src="https://oauth.io/api/providers/facebook/logo" title=">
                                 <label>Facebook</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/twitter/logo" title="">
+                                <img src="https://oauth.io/api/providers/twitter/logo" title=">
                                 <label>Twitter</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/vk/logo" title="">
+                                <img src="https://oauth.io/api/providers/vk/logo" title=">
                                 <label>Vkontakte</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/github/logo" title="">
+                                <img src="https://oauth.io/api/providers/github/logo" title=">
                                 <label>GitHub</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/linkedin/logo" title="">
+                                <img src="https://oauth.io/api/providers/linkedin/logo" title=">
                                 <label>Linkedin</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/dropbox/logo" title="">
+                                <img src="https://oauth.io/api/providers/dropbox/logo" title=">
                                 <label>Dropbox</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/instagram/logo" title="">
+                                <img src="https://oauth.io/api/providers/instagram/logo" title=">
                                 <label>Instagram</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/flickr/logo" title="">
+                                <img src="https://oauth.io/api/providers/flickr/logo" title=">
                                 <label>Flickr</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/tumblr/logo" title="">
+                                <img src="https://oauth.io/api/providers/tumblr/logo" title=">
                                 <label>Tumblr</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/yahoo/logo" title="">
+                                <img src="https://oauth.io/api/providers/yahoo/logo" title=">
                                 <label>Yahoo</label>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="https://oauth.io/api/providers/yandex/logo" title="">
+                                <img src="https://oauth.io/api/providers/yandex/logo" title=">
                                 <label>Yandex</label>
                             </a>
                         </li>
