--- a/test.html
+++ b/test.html
@@ -12,5 +12,10 @@
   "articleBody" : "related for the most part to the Internet, and our vision of possible ways to solve them. Those will often be followed by previews of projects mentioned in the stories. Keep in mind: some of them might change, some will remain just our fantasy; at this moment"
 }
 </script>
-<script src="https://apis.google.com/js/plusone.js"></script>
-<g:plus action="share"></g:plus>
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
